Fix video size on mobile

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -131,7 +131,7 @@ blockquote {
 }
 
 /* Add video class for iframes to make them responsive */
-.video {
+video {
     width: 100%;
     height: 360px;
     @include media-query($on-laptop) {
